# wifi

./: README.md
day2/: abc  add-connection-libnm  getNetworks.c  trial.c  version  version.c
day3/: checkenum.c  chkstatus.c  get  getbetworkConnectivitymethods.h
day3/lib/: CMakeLists.txt  checkstatus.cpp  checkstatus.h  main.cpp
day3/lib/src/libnm/: nm-core-enum-types.h
day3/valgrind/: code  log.txt
day4/: a.out  callback.cpp  callbackchecker.c  checkstatuscallback.c
day5/: a.out  callback.cpp  callbackSir.cpp  nicStatus.c
day6/lib/: a.out  checkstatus.cpp  checkstatus.h  main.cpp  rtnetlink.c
day6/lib/src/pkgconfig/: libnm.pc
day7/lib/: CMakeLists.txt  checkstatus.cpp  checkstatus.h  main.cpp
day7/lib/src/libnm/: nm-version-macros.h
example-api-client/: CMakeLists.txt
example-api-client/src/: App.cpp  DemoApiClient.hpp  SimpleExample.hpp
new/: a.out  callbacker.cpp  interfaceName.c  ipaddr.c  ipaddr.cpp
new/lib/: CMakeLists.txt  main.cpp  rtnetlink.cpp  rtnetlink.h  sample.cpp
wifistatus/: ipaddr.c  nicwithname.c
wifistatus/lib/: CMakeLists.txt  a.out  main.cpp  rtnetlink.cpp  rtnetlink.h  sample.json
